--- a/TinYard Tests/TinYard Tests.csproj
+++ b/TinYard Tests/TinYard Tests.csproj
@@ -52,8 +52,9 @@
     <Compile Include="TestClasses\TestBundle.cs" />
     <Compile Include="TestClasses\TestConfig.cs" />
     <Compile Include="TestClasses\TestExtension.cs" />
-    <Compile Include="Tests\ContextTest.cs" />
+    <Compile Include="Tests\ContextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\MappingTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
