--- a/TinYard Tests/TinYard Tests.csproj
+++ b/TinYard Tests/TinYard Tests.csproj
@@ -53,9 +53,11 @@
     <Compile Include="TestClasses\TestConfig.cs" />
     <Compile Include="TestClasses\TestEvent.cs" />
     <Compile Include="TestClasses\TestExtension.cs" />
+    <Compile Include="TestClasses\TestInjectable.cs" />
     <Compile Include="Tests\ContextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\EventDispatcherTests.cs" />
+    <Compile Include="Tests\InjectionTests.cs" />
     <Compile Include="Tests\MappingTests.cs" />
   </ItemGroup>
   <ItemGroup>
