--- a/TinYard Tests/TinYard Tests.csproj
+++ b/TinYard Tests/TinYard Tests.csproj
@@ -57,7 +57,8 @@
     <Compile Include="Tests\ContextTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\EventDispatcherTests.cs" />
-    <Compile Include="Tests\InjectionTests.cs" />
+    <Compile Include="Tests\InjectionAttributeTests.cs" />
+    <Compile Include="Tests\InjectorTests.cs" />
     <Compile Include="Tests\MappingTests.cs" />
   </ItemGroup>
   <ItemGroup>
