--- a/.github/workflows/dotnetDeploy.yml
+++ b/.github/workflows/dotnetDeploy.yml
@@ -5,6 +5,8 @@ on:
     branches: [ master ]
     tags:  
       - 'v*.*.*' # Only do this on version tags
+  pull_request:
+    branches: [ master ]
 
 jobs:
   build:
