--- a/.github/workflows/dotnetDeploy.yml
+++ b/.github/workflows/dotnetDeploy.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches: [ master ]
 
+env:
+    version: 1.3.0
+
 jobs:
   build:
 
@@ -17,8 +20,6 @@ jobs:
     - uses: actions/checkout@v2
       #env:
         #version: ${GITHUB_REF#refs/*/} #Get Tag from Git refs
-      env:
-        version: v1.3.1
     
     - name: Output Version
       run: echo $version
@@ -35,4 +36,4 @@ jobs:
       run: dotnet test --verbosity normal -c Release
       
     - name: Pack
-      run: dotnet pack --include-source --no-restore --version-suffix $version
+      run: dotnet pack --include-source --no-restore --version-suffix "${{ env.version }}"
