--- a/.github/workflows/dotnetDeploy.yml
+++ b/.github/workflows/dotnetDeploy.yml
@@ -32,8 +32,11 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
       
+    - name: Build
+      run: dotnet build --no-restore -c Release
+      
     - name: Release Test
-      run: dotnet test --verbosity normal -c Release
+      run: dotnet test --no-restore --no-build --verbosity normal -c Release
       
     - name: Pack
-      run: dotnet pack --include-source --no-restore --version-suffix "${{ env.version }}"
+      run: dotnet pack --include-source --no-build --no-restore --version-suffix "${{ env.version }}"
