--- a/.github/workflows/dotnetDeploy.yml
+++ b/.github/workflows/dotnetDeploy.yml
@@ -38,8 +38,5 @@ jobs:
     - name: Release Test
       run: dotnet test --no-restore --no-build --verbosity normal -c Release
 
-    - name: Output files
-      run: ls
-      
     - name: Pack
-      run: dotnet pack --include-source --no-build --no-restore --version-suffix "${{ env.version }}"
+      run: dotnet pack --include-source --no-build --no-restore --version-suffix "${{ env.version }}" -c Release
