--- a/.github/workflows/dotnetDeploy.yml
+++ b/.github/workflows/dotnetDeploy.yml
@@ -9,7 +9,8 @@ on:
     branches: [ master ]
 
 env:
-    version: 1.3.0
+    version: ${GITHUB_REF#refs/*/} #Get Tag from Git refs
+
 
 jobs:
   build:
