--- a/.github/workflows/dotnetBuildAndTest.yml
+++ b/.github/workflows/dotnetBuildAndTest.yml
@@ -30,4 +30,4 @@ jobs:
       run: dotnet test --verbosity normal -c Debug
       
     - name: Release Test
-      run: dotnet test --no-build --verbosity normal -c Release
+      run: dotnet test --no-build --verbosity normal -c Release /p:CollectCoverage=true
