--- a/.github/workflows/dotnetBuildAndTest.yml
+++ b/.github/workflows/dotnetBuildAndTest.yml
@@ -29,10 +29,9 @@ jobs:
     - name: Debug Test
       run: dotnet test --verbosity normal -c Debug
       
-    - name: Release Test
-      run: dotnet test --no-build --verbosity normal -c Release /p:CollectCoverage=true
-      
     - name: Test & publish code coverage
       uses: paambaati/codeclimate-action@v2.7.5
       env:
         CC_TEST_REPORTER_ID: ${{ env.CODECLIMATE_TEST_REPORTER_ID }}
+      with:
+        coverageCommand: dotnet test --no-build -c Release /p:CollectCoverage=true /p:CoverletOutputFormat=lcov /p:CoverletOutput=coverage
