--- a/TinYard/TinYard.csproj
+++ b/TinYard/TinYard.csproj
@@ -40,4 +40,8 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
